# CR-Battle-Dataset-Generator

./: .gitignore  Cargo.toml  README.md  TODO.md  xmake.lua
SC-To-PNG/: xmake.lua
SC-To-PNG/lib/: LZHAM.lib  LZMA.lib  SupercellCompression.lib
SC-To-PNG/lib/debug/: ASTC.lib  ETCPACK.lib  LZHAM.lib  LZMA.idb  LZMA.lib  SupercellCompression.idb  SupercellFlash.idb  Zstandard.idb  Zstandard.lib
SC-To-PNG/src/: main.cpp
config/: settings.json
lib/: LZHAM.lib  LZMA.lib  SupercellCompression.lib  SupercellFlash.lib  Zstandard.lib
scripts/: ArenaType.txt  CSV_Definer.py  EntityDataTomlConstructor.py  EntityEffect.txt  Generate_Enum_Class.py  Run_Enum.py  TowerSkin.txt  enum.py
src/: Canvas.cpp  Canvas.h  Image.cpp  Image.h  main.cpp  main.rs
src/arena/: Arena.cpp  Arena.h  ArenaType.h  Building.cpp  Building.h  Character.cpp  Character.h  Entity.cpp  Entity.h  TowerSkin.cpp  TowerSkin.h
src/arena_files/: EntityDataIndexer.cpp  EntityDataIndexer.h
src/canvas/: AnnotationBox.cpp  AnnotationBox.h  Canvas.cpp  Canvas.h  Drawable.h  Image.cpp  Image.h  ImageLoader.cpp  ImageLoader.h
src/character/: Character.cpp  Character.h  CharacterType.h  Orientation.h
src/data/: TowerPosition.h
src/files/: AbstractTable.h  CSV.cpp  CSV.h  File.h  FileManager.cpp  FileManager.h  Table.cpp  Table.h  Table.hpp
src/files/data/: Data.h  (+3 more)
src/game/: AnnotationBox.cpp  AnnotationBox.h  Game.cpp  Game.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h
src/util/: Random.cpp  Random.h  enums.h
src/utils/: Global.cpp  Global.hpp  LRUCache.hpp  Random.cpp  Random.h
(+38 files in other folders)
