[package]
name = "CR-Battle-Dataset-Generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
piston = "0.53.2"
piston2d-graphics = "0.43.0"
piston_window = "0.128.0"
pistoncore-glutin_window = "0.71.0"
skia-safe = "0.63.0"
